// Vitest Snapshot v1

exports[`ESelect > should work with \`modelValue\` props 1`] = `
"<div class=\\"eu-select-down eu-select\\" options=\\"\\">
  <div class=\\"eu-select-down-control eu-select-down-control-md\\" role=\\"listbox\\" tabindex=\\"0\\">
    <div class=\\"eu-select-down-control-single\\">基础用法1</div><input class=\\"eu-select-down-control-input\\">
    <!----><span class=\\"eu-icon down-icon\\" role=\\"link\\" tabindex=\\"0\\" style=\\"font-size: 20px;\\"><svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 32 32\\" class=\\"eu-icon eu-icon-chevron-down\\"><path fill=\\"currentColor\\" d=\\"M16 22 6 12l1.4-1.4 8.6 8.6 8.6-8.6L26 12z\\"></path></svg></span>
  </div>
  <transition-stub name=\\"slide-toggle\\" appear=\\"false\\" persisted=\\"false\\" css=\\"true\\">
    <div class=\\"eu-select-down-pane\\" style=\\"display: none;\\" role=\\"listbox\\" tabindex=\\"0\\">
      <div class=\\"eu-select-down-pane-wrapper\\">
        <ul class=\\"scroll-pane\\">
          <li class=\\"eu-select-option eu-select-option-selected\\" role=\\"option\\" aria-selected=\\"true\\">基础用法1</li>
          <li class=\\"eu-select-option\\" role=\\"option\\" aria-selected=\\"false\\">基础用法2</li>
          <li class=\\"eu-select-option\\" role=\\"option\\" aria-selected=\\"false\\">基础用法3</li>
        </ul><span class=\\"down-arrow\\"></span>
      </div>
    </div>
  </transition-stub>
</div>"
`;

exports[`ESelect > should work with \`modelValue\` props 4`] = `
"<div class=\\"eu-select-down eu-select\\" options=\\"\\">
  <div class=\\"eu-select-down-control eu-select-down-control-md\\" role=\\"listbox\\" tabindex=\\"0\\">
    <div class=\\"eu-select-down-control-single\\">基础用法2</div><input class=\\"eu-select-down-control-input\\">
    <!----><span class=\\"eu-icon down-icon\\" role=\\"link\\" tabindex=\\"0\\" style=\\"font-size: 20px;\\"><svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 32 32\\" class=\\"eu-icon eu-icon-chevron-down\\"><path fill=\\"currentColor\\" d=\\"M16 22 6 12l1.4-1.4 8.6 8.6 8.6-8.6L26 12z\\"></path></svg></span>
  </div>
  <transition-stub name=\\"slide-toggle\\" appear=\\"false\\" persisted=\\"false\\" css=\\"true\\">
    <div class=\\"eu-select-down-pane\\" style=\\"display: none;\\" role=\\"listbox\\" tabindex=\\"0\\">
      <div class=\\"eu-select-down-pane-wrapper\\">
        <ul class=\\"scroll-pane\\">
          <li class=\\"eu-select-option\\" role=\\"option\\" aria-selected=\\"false\\">基础用法1</li>
          <li class=\\"eu-select-option eu-select-option-selected\\" role=\\"option\\" aria-selected=\\"true\\">基础用法2</li>
          <li class=\\"eu-select-option\\" role=\\"option\\" aria-selected=\\"false\\">基础用法3</li>
        </ul><span class=\\"down-arrow\\"></span>
      </div>
    </div>
  </transition-stub>
</div>"
`;
